<?xml version="1.0" encoding="utf-8"?><!DOCTYPE resources [<!ENTITY scheme "http"><!ENTITY host "alkor.info"><!ENTITY pathPrefix "loc">]>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Where are you?</string>
    <string name="title_activity_simple">Where are you?</string>
    <string name="action_settings">Settings</string>

    <string name="provider">provider</string>
    <string name="time">time</string>
    <string name="coords">location</string>
    <string name="altitude">altitude</string>
    <string name="bearing">bearing</string>
    <string name="speed">speed</string>

    <string name="location_query_timeout_title">Location query timeout</string>
    <string name="location_query_timeout_dialog_message">Maximal time to await for location information in seconds</string>
    <string name="location_query_timeout_default" translatable="false">30sec</string>

    <string name="location_query_string_title">Location query string</string>
    <string name="location_query_string_dialog_message">The key word used to indicate location request</string>
    <string name="location_query_string_default">Hey, where are you?</string>

    <string name="location_response_max_age_title">Maximal age of location</string>
    <string name="location_response_max_age_dialog_message">If location response is older than this threshold then it is ignored.</string>
    <string name="location_response_max_age_default" translatable="false">1min</string>

    <string name="scheme" translatable="false">&scheme;</string>
    <string name="host" translatable="false">&host;</string>
    <string name="pathPrefix" translatable="false">/&pathPrefix;</string>

    <!-- http://loc.alkor.info/?q=<location> -->
    <string name="location_response_format" translatable="false">&scheme;://&pathPrefix;.&host;/?q=%s</string>
    <string name="no_location_response" tools:ignore="TypographyEllipsis">Sorry, my location cannot be found... :(</string>
    <!-- http://loc.alkor.info/?q=<location>,<phone>,<name>,<key> -->
    <string name="location_presenter_url" translatable="false">&scheme;://&pathPrefix;.&host;/?q=%s,%s,%s,%s</string>
    <string name="show">Show</string>
    <string name="you">You</string>

    <string name="completed_within_duration">Completed in %s</string>
    <string name="query_started_with_timeout">Location getting started with timeout %s</string>
    <string name="query_succeeded">Location found</string>
    <string name="query_failed">Location not found</string>

    <string name="share">Share&#8230;</string>
    <string name="hera_i_am">Here I am</string>
    <string name="share_via">Share via</string>
    <string name="popup_content_desc">Actions</string>

    <string name="tab_location">Location</string>
    <string name="tab_actions">Actions</string>
    <string name="tab_persons">Persons</string>

    <plurals name="duration_days">
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>
    <plurals name="duration_hours">
        <item quantity="one">%d hour</item>
        <item quantity="other">%d hours</item>
    </plurals>
    <plurals name="duration_minutes">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <plurals name="duration_seconds">
        <item quantity="one">%d second</item>
        <item quantity="other">%d seconds</item>
    </plurals>
    <plurals name="duration_milliseconds">
        <item quantity="one">%d millisecond</item>
        <item quantity="other">%d milliseconds</item>
    </plurals>
    <plurals name="duration_microseconds">
        <item quantity="one">%d microsecond</item>
        <item quantity="other">%d microsecond</item>
    </plurals>
    <plurals name="duration_nanoseconds">
        <item quantity="one">%d nanosecond</item>
        <item quantity="other">%d nanosecond</item>
    </plurals>

    <plurals name="elapsed_duration_days">
        <item quantity="one">Elapsed %d day</item>
        <item quantity="other">Elapsed %d days</item>
    </plurals>
    <plurals name="elapsed_duration_hours">
        <item quantity="one">Elapsed %d hour</item>
        <item quantity="other">Elapsed %d hours</item>
    </plurals>
    <plurals name="elapsed_duration_minutes">
        <item quantity="one">Elapsed %d minute</item>
        <item quantity="other">Elapsed %d minutes</item>
    </plurals>
    <plurals name="elapsed_duration_seconds">
        <item quantity="one">Elapsed %d second</item>
        <item quantity="other">Elapsed %d seconds</item>
    </plurals>
    <plurals name="elapsed_duration_milliseconds">
        <item quantity="one">Elapsed %d millisecond</item>
        <item quantity="other">Elapsed %d milliseconds</item>
    </plurals>
    <plurals name="elapsed_duration_microseconds">
        <item quantity="one">Elapsed %d microsecond</item>
        <item quantity="other">Elapsed %d microsecond</item>
    </plurals>
    <plurals name="elapsed_duration_nanoseconds">
        <item quantity="one">Elapsed %d nanosecond</item>
        <item quantity="other">Elapsed %d nanosecond</item>
    </plurals>

    <string-array name="time_units_values" translatable="false">
        <item>d</item>
        <item>h</item>
        <item>min</item>
        <item>sec</item>
    </string-array>

    <string-array name="time_units">
        <item>days</item>
        <item>hours</item>
        <item>minutes</item>
        <item>seconds</item>
    </string-array>

    <string name="permission_needed_title">Permission needed</string>
    <string name="permission_required">This application requires permissions to:</string>
    <string name="permission_entry_list_entry_prefix" translatable="false">\u00A0•\u00A0</string>
    <string name="location_permission_needed">use device location so that it could be presented to user.</string>
    <string name="receive_sms_permission_needed">read incoming text messages to react on location requests.</string>
    <string name="read_contacts_permission_needed">read contacts in process of location requesting.</string>
    <string name="send_sms_permission_needed">send text messages to transport location responses.</string>
    <string name="read_phone_state_permission_needed">read phone and network state to send location responses.</string>

    <string name="query_someones_location">You have asked location of</string>
    <string name="query_my_location">Your location was asked by</string>
    <string name="your_location_is">Your location is</string>

    <string name="status_sending">sending</string>
    <string name="status_delivery">delivery</string>
    <string name="status_locating">locating</string>

    <string name="result_inProgress" translatable="false">…</string>
    <string name="result_succeeded" translatable="false">✓</string>
    <string name="result_failed" translatable="false">✗</string>

    <string name="above_sea_level">%s above sea level</string>
    <string name="speed_and_bearing">at %s heading %s (%s)</string>

    <string name="location_unknown">unknown</string>

    <string name="provider_gps">GPS</string>
    <string name="provider_network">network</string>

    <string name="action_deletion">Deletion</string>
    <string name="action_deletion_confirmation_query">Are you sure to remove this entry?</string>

    <string name="location_request">Location request</string>
    <string name="location_request_confirmation_query">Are you sure to send location request to %s?</string>

    <string name="person_unknown">Unknown</string>

    <string name="phone" translatable="false">✆ %s</string>

    <string name="person_deletion">Deletion</string>
    <string name="person_deletion_confirmation_query">Are you sure to remove this entry?</string>
</resources>
