<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="locationModel"
            type="info.alkor.whereareyou.ui.SingleLocationViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="info.alkor.whereareyou.ui.SimpleActivityFragment"
        tools:showIn="@layout/activity_simple">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:shrinkColumns="2">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/providerName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/provider" />

                <Space
                    android:layout_width="8dp"
                    android:layout_height="match_parent" />

                <TextView
                    android:id="@+id/providerValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{locationModel.provider}" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/timeName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/time" />

                <Space
                    android:layout_width="8dp"
                    android:layout_height="match_parent" />

                <TextView
                    android:id="@+id/timeValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{locationModel.time}" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/coordsName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/coords" />

                <Space
                    android:layout_width="8dp"
                    android:layout_height="match_parent" />

                <TextView
                    android:id="@+id/coordsValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{locationModel.coords}" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/altName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/altitude" />

                <Space
                    android:layout_width="8dp"
                    android:layout_height="match_parent" />

                <TextView
                    android:id="@+id/altValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{locationModel.altitude}" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/bearingName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bearing" />

                <Space
                    android:layout_width="8dp"
                    android:layout_height="match_parent" />

                <TextView
                    android:id="@+id/bearingValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{locationModel.bearing}" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/speedName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/speed" />

                <Space
                    android:layout_width="8dp"
                    android:layout_height="match_parent" />

                <TextView
                    android:id="@+id/speedValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{locationModel.speed}" />
            </TableRow>
        </TableLayout>

    </android.support.constraint.ConstraintLayout>
</layout>